--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@ body {
     </section>
 
     <footer>
-      &copy; Arabsalim Quality WAR gaming lounge. 81-237-252
+      &copy; Arabsalim Quality WAR gaming lounge, <br>
+       From 6pm -> 1am <br> Contact us: 81-237-252
     </footer>
   </div>
 
