--- a/index.html
+++ b/index.html
@@ -135,6 +135,26 @@ body {
   white-space: nowrap;
 }
 
+@media (max-width: 600px) {
+  .menu-item img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .menu-item h3 {
+    font-size: 16px;
+  }
+
+  .menu-item p {
+    font-size: 12px;
+  }
+
+  .menu-item-price {
+    font-size: 14px;
+  }
+}
+
+
   </style>
 </head>
 <body>
