--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@ body {
     }
 
     header h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
-    }
+  font-size: 32px;
+  margin-bottom: 10px;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff0000, 0 0 40px #ff0000, 0 0 50px #ff0000, 0 0 75px #ff0000;
+}
+
 
     header p {
       font-size: 16px;
@@ -153,6 +155,12 @@ body {
     font-size: 14px;
   }
 }
+.coral-pixels-regular {
+  font-family: "Coral Pixels", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 
   </style>
@@ -161,7 +169,7 @@ body {
 
   <div class="content">
     <header>
-      <h1>QUALITY Saj</h1>
+      <h1 class="coral-pixels-regular">QUALITY Saj</h1>
       <p>Saj & Burgers</p>
     </header>
 
